Added post request to add Authors, added open-api for documentation and swagger ui for testing purposes