@@ -1,9 +1,11 @@
 package com.example;
 
-import java.util.Arrays;
+import java.net.URI;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 
+import javax.ws.rs.Consumes;
 import javax.ws.rs.GET;
 import javax.ws.rs.POST;
 import javax.ws.rs.Path;
@@ -11,17 +13,18 @@ import javax.ws.rs.PathParam;
 import javax.ws.rs.Produces;
 import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
+import javax.ws.rs.core.UriBuilder;
 
 @Path("/author")
 public class AuthorResource {
 
-    private List<Author> authors = Arrays.asList(
-        new Author().id(1).firstName("H.P.").lastName("Lovecraft"),
-        new Author().id(2).firstName("August").lastName("Derleth"),
-        new Author().id(3).firstName("Robert").lastName("Bloch"),
-        new Author().id(4).firstName("Clark").lastName("Smith"),
-        new Author().id(5).firstName("Robert").lastName("Howard")
-    );
+    private List<Author> authors = new ArrayList<>(List.of(
+        new Author().id(1).setFirstName("H.P.").setLastName("Lovecraft"),
+        new Author().id(2).setFirstName("August").setLastName("Derleth"),
+        new Author().id(3).setFirstName("Robert").setLastName("Bloch"),
+        new Author().id(4).setFirstName("Clark").setLastName("Smith"),
+        new Author().id(5).setFirstName("Robert").setLastName("Howard")
+    ));
 
     @GET
     @Path("/hello")
@@ -50,5 +53,19 @@ public class AuthorResource {
         return authorOptional.isPresent() 
             ? Response.ok(authorOptional.get()).build()
             : Response.noContent().build();
+    }
+
+    @POST
+    @Consumes(MediaType.APPLICATION_JSON)
+    @Produces(MediaType.APPLICATION_JSON)
+    public Response postAuthor(Author author) {
+
+        author.id(authors.size() + 1);
+
+        authors.add(author);
+
+        URI uri = UriBuilder.fromPath(String.format("/author/%s", author.getId())).build();
+
+        return Response.created(uri).build();
     }
 }
